--- a/public/css/cardSocial.css
+++ b/public/css/cardSocial.css
@@ -27,7 +27,7 @@
     margin: 30px;
 }
 
-.btn-yellow{
+/* .btn-yellow{
     color: #fff;
     background-color: #FFA300 !important;
     border-color: #FFA300;
@@ -39,13 +39,33 @@
     .btn-yellow{
         font-size: 2rem;
     }
-}
+} */
 
-.btn-yellow:hover{
+/* .btn-yellow:hover{
     color: #fff !important;
     background-color: #ffa200cb !important;
     border-color: #ffa200cb;
+} */
+
+
+/* boton subir foto */
+
+.custom-button-photo{
+    background: #ffa300 !important;
+    border: unset;
+    color: white !important;
+    width: fit-content;
+    margin: auto;
+    padding: 8px 24px !important;
 }
+
+.btn:focus {
+    box-shadow: none !important;
+}
+
+/*END SUGIR FOTO*/
+
+
 
 /* LINEA*/
 .lineSocial{
@@ -97,12 +117,13 @@
 }
 
 .instagram-card-content{
-   padding: 20px 20px 5px;
+   padding: 20px 10px 5px;
    position: absolute;
    width: 100%;
-   color: white !important;
+   color: white;
    bottom: 0;
    box-sizing: border-box;
+   z-index: 1;
 }
 
 .likes{
@@ -132,6 +153,17 @@
    position: relative;
 }
 
+.instagram-card-image:after {
+   content: '';
+   position: absolute;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   display: inline-block;
+   background: linear-gradient(to bottom, rgb(0 0 0 / 0%) 0%,rgb(2 2 2 / 50%) 100%);
+}
+
 .instagram-card-footer{
    padding: 15px 10px;
    display: flex;
@@ -144,17 +176,13 @@
     cursor: pointer;
 }
 
-@media(min-width:768px){
-   .instagram-card-footer{
-       font-size: 1rem;
-   }
-}
+
 
 hr{
    border: none;
    border-bottom: 1px solid #ccc;
    margin-top: 30px;
-   margin-bottom: 0px;
+    margin-bottom: 35px;
 
 }
 
@@ -193,36 +221,19 @@ hr{
    grid-gap: 25px;
 }
 
-   @media(min-width:768px){
-       .container-cards{
-           grid-template-columns: repeat(2, 1fr) ;
-       }
-   }
-
-    .instagram-card-image{
-       position: relative;
+@media(min-width:768px){
+    .container-cards{
+        grid-template-columns: repeat(2, 1fr) ;
     }
-
-    .instagram-card-content::after {
-        content: '';
-        display: block;
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        top: 0;
-        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 29%, rgba(0,0,0,0.2) 71%, rgba(0,0,0,0.5) 100%);
-        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.2) 71%,rgba(0,0,0,0.5) 100%);
-        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 29%,rgba(0,0,0,0.2) 71%,rgba(0,0,0,0.5) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#80000000',GradientType=0 );
-    }
-
+    .instagram-card-footer{
+      font-size: 1rem;
+  }
+ }
 
 .instagram-card-image img{
    width: 100% !important;
    object-fit: cover;
    max-height: 250px;
-
 }
 
 .comment{
@@ -256,76 +267,15 @@ hr{
 .card-description{
    margin: 5px 0;
    font-size: .8rem;
+
+   display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
 }
 
-/*VIDEO STILOS*/
-.container-custom-eventos{
-    padding-top: 30px !important;
-}
 
-.instagram-card-image iframe{
-width: 100%;
-height: auto;
 
-}
-
-hr {
-border-bottom: 0px !important;
-}
-
-.container-cards {
-grid-template-columns: repeat(3, 1fr) !important;
-}
-
-.instagram-card-image:after {
-position: unset !important;
-}
-
-.btn:focus {
-box-shadow: unset !important;
-}
-
-@media screen and (max-width:1024px){
-
-    .container{
-            padding: 0 !important;
-            margin: 0;
-        }
-
-    .container-custom-eventos{
-        padding: 30px 0 60px !important;
-    }
-
-    /* NO BORRAR ES UNA EXCEPCION PARA QUE PUEDA FUNCIONAR EN ESTA PESTAÑA */
-            footer, .container-footer{
-            position: unset !important;
-        }
-}
-
-@media screen and (max-width:768px){
-
-    .container-cards {
-        grid-template-columns: repeat(2, 1fr) !important;
-    }
-}
-
-@media screen and (max-width:550px){
-    .container-custom-eventos{
-        padding: 30px 15px 15px !important;
-    }
-
-    .headingSocial{
-        margin: auto !important;
-    }
-
-    .headingSocial p {
-        font-size: .9rem !important;
-    }
-    .container-cards {
-        grid-template-columns: repeat(1, 1fr) !important;
-    }
-
-}
 
 /** MODAL COMMENTARY **/
 
