--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,39 @@
+/* FONT FAMILY */
 
+@font-face {
+    font-family: "Bree";
+    src: url("http://127.0.0.1:8000/font/Bree-Regular.ttf");
+    font-weight: 500;
+  }
+
+  /* @font-face {
+    font-family: "Antenna";
+    src: url("http://127.0.0.1:8000/font/Antenna-Regular.ttf");
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: "Antenna";
+    src: url("http://127.0.0.1:8000/font/Antenna-Bold.ttf");
+    font-weight: Bold;
+  }
+
+  @font-face {
+    font-family: "Antenna";
+    src: url("http://127.0.0.1:8000/font/Antenna-Black.ttf");
+    font-weight: 900;
+  } */
+
+
+
+
+  body, span, p, h4, h5, h3, h1, h2, a{
+    font-family: 'Bree';
+    font-weight: 500;
+}
+
+
+/* @import url('http://127.0.0.1:8000/font/Antenna-Regular.otf'); */
         /*UTLIDADES*/
 
         .bg-pink{
@@ -49,7 +84,17 @@
             background-color: #D7573A;
         }
 
+
+        /* INICIO CHAT SCROLL */
+        #messagesDiv{
+            scroll-behavior: smooth;
+            overflow-y: scroll;
+            max-height: 315px;
+
+        }
         /*END UTILIDADES*/
+
+
 
         .main {
             display: flex;
@@ -59,15 +104,20 @@
 
         /** Menu **/
 
+        .navbar .container{
+            padding: 0;
+            margin: auto;
+        }
+
         .navbar-nav .nav-item {
             position: relative;
         }
 
         .navbar-nav .nav-item a {
-            color:#fff  !important;
-            font-size: 1rem;
-            font-weight: 700;
-            text-transform: uppercase;
+            color: #fff !important;
+            font-size: .95rem;
+            font-weight: 300;
+            text-transform: unset;
         }
 
         .dropdown-menu {
@@ -75,15 +125,119 @@
             box-shadow: -4px 2px 5px -6px rgba(217,217,217,0.83);
             -webkit-box-shadow: -4px 2px 5px -6px rgba(217,217,217,0.83);
             -moz-box-shadow: -4px 2px 5px -6px rgba(217,217,217,0.83);
+            border: 0;
+
         }
+
+        @media(min-width:768px){
+            .dropdown-menu {
+                text-align: right;
+            }
+        }
+
+
 
         .dropdown-menu .dropdown-item:hover{
             background-color: #FF155B;
         }
 
         .navbar-nav .nav-item a.actived {
-            color: #f9e3cf !important;
+            color: white !important;
         }
+
+        /* INICIO BURGUER BUTTON CUSTOM */
+
+        .navbar-toggler{
+            display: none !important;
+        }
+
+        #menuToggle{
+            display: block;
+            position: relative;
+            z-index: 1;
+            -webkit-user-select: none;
+            user-select: none;
+            }
+
+            #menuToggle a
+            {
+            text-decoration: none;
+            color: #232323;
+
+            transition: color 0.3s ease;
+            }
+
+            #menuToggle a:hover
+            {
+            color: tomato;
+            }
+
+
+            #menuToggle input
+            {
+                display: block;
+                width: 35px;
+                height: 29px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                cursor: pointer;
+                opacity: 0;
+                z-index: 2;
+
+            -webkit-touch-callout: none;
+            }
+        #menuToggle span{
+            display: block;
+            width: 33px;
+            height: 4px;
+            margin-bottom: 5px;
+            position: relative;
+
+            background: white;
+            border-radius: 3px;
+
+            z-index: 1;
+
+            transform-origin: 4px 0px;
+
+            transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                        background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                        opacity 0.55s ease;
+            }
+
+            #menuToggle span:first-child
+            {
+            transform-origin: 0% 0%;
+            }
+
+            #menuToggle span:nth-last-child(2)
+            {
+            transform-origin: 0% 100%;
+            }
+
+
+            #menuToggle input:checked ~ span
+            {
+            opacity: 1;
+            transform: rotate(45deg) translate(-5px, -15px);
+            background: white;
+            }
+
+
+            #menuToggle input:checked ~ span:nth-last-child(3)
+            {
+            opacity: 0;
+            transform: rotate(0deg) scale(0.2, 0.2);
+            }
+
+            #menuToggle input:checked ~ span:nth-last-child(2)
+            {
+            transform: rotate(-45deg) translate(-5px, 15px);
+            }
+        /* FIN BURGUER BUTTON CUSTOM */
 
 
         @media(min-width:768px){
@@ -94,7 +248,7 @@
                 height: 2px;
                 bottom: 0;
                 width: 70%;
-                background: #f9e3cf;
+                background: white;
                 margin: auto;
                 left: 0;
                 right: 0;
@@ -109,14 +263,6 @@
             border-color: rgb(255 255 255 / 45%);
         }
 
-        /* .navbar-light .navbar-toggler-icon {
-
-        background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg'
-        width='30' height='30'
-        viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 280, 280, 280.5%29'
-        stroke-linecap='round' stroke-miterlimit='10'
-        stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e);
-      } */
 
         /** Formulario **/
         .section-form {
@@ -182,6 +328,62 @@
                 .label-title {
                     font-size: 1.1rem;
                 }
+
+                /* INICIO HEADER */
+
+                .navbar-collapse {
+                    position: absolute;
+                    top: 90px;
+                    z-index: 1;
+                    width: 95%;
+                    background: white;
+                    left: 0;
+                    right: 0;
+                    padding: 17px 25px;
+                    margin: auto;
+                    border-radius: 15px;
+                }
+
+                .navbar-nav .nav-item a.actived {
+                    color: #E40571 !important;
+                }
+
+                .navbar-nav .nav-item a.actived:after {
+                    width: 100%;
+                    background: #E40571;
+                }
+
+                .dropdown-menu {
+                    background-color: unset;
+                    border: unset;
+                }
+
+                .navbar-nav .nav-item a{
+                    color:#959595 !important;
+                    font-size: .9rem !important;
+                }
+
+                .dropdown-menu .dropdown-item:hover {
+                    color: #FF155B;
+                    background: unset;
+                }
+
+                .navbar-nav .nav-item .nav-link {
+                    color: #959595 !important;
+                }
+
+
+                .navbar-light .navbar-toggler {
+                    display: block !important;
+                    border-color: transparent;
+                    padding: 0;
+                    height: 40px;
+                    width: 40px;
+                    border-radius: 50%;
+                }
+
+
+                /* FIN HEADER */
             }
 
 
