Actualizando el proyecto

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,34 +1,15 @@
 /* FONT FAMILY */
 
-@font-face {
-    font-family: "Bree";
-    src: url("http://127.0.0.1:8000/font/Bree-Regular.ttf");
-    font-weight: 500;
-  }
+/* @font-face {
+font-family: "Bree";
+src: url("http://127.0.0.1:8000/font/Bree-Regular.ttf");
+font-weight: 500;
+} */
 
-  /* @font-face {
-    font-family: "Antenna";
-    src: url("http://127.0.0.1:8000/font/Antenna-Regular.ttf");
-    font-weight: normal;
-  }
-
-  @font-face {
-    font-family: "Antenna";
-    src: url("http://127.0.0.1:8000/font/Antenna-Bold.ttf");
-    font-weight: Bold;
-  }
-
-  @font-face {
-    font-family: "Antenna";
-    src: url("http://127.0.0.1:8000/font/Antenna-Black.ttf");
-    font-weight: 900;
-  } */
-
-
-
+  @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
 
   body, span, p, h4, h5, h3, h1, h2, a{
-    font-family: 'Bree';
+    font-family: 'Bree Serif', serif;
     font-weight: 500;
 }
 
